<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/parent_padding"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swtPremium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/switch_text"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_views"
        android:text="@string/edittext_text_01"
        style="@style/Base.TextAppearance.AppCompat.Body1" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:maxLength="20"
        style="@style/Base.TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/textCharProgress1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@plurals/char_limit_text"
        style="@style/Base.TextAppearance.AppCompat.Caption" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_views"
        android:text="@string/edittext_text_02"
        style="@style/Base.TextAppearance.AppCompat.Body1" />

    <EditText
        android:id="@+id/txtSirname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:maxLength="20"
        style="@style/Base.TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/textCharProgress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@plurals/char_limit_text"
        style="@style/Base.TextAppearance.AppCompat.Caption" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_views"
        android:text="@string/radiogroup_text"
        style="@style/Base.TextAppearance.AppCompat.Body1" />

    <RadioGroup
        android:id="@+id/rdgTreatment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_radiorutton"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:scaleType="centerInside" />

        <RadioButton
            android:id="@+id/rdb01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_radiobutton"
            android:text="@string/radiobutton_text_01" />

        <RadioButton
            android:id="@+id/rdb02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_radiobutton"
            android:text="@string/radiobutton_text_02" />

        <RadioButton
            android:id="@+id/rdb03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_radiobutton"
            android:text="@string/radiobutton_text_03" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/chkPolitely"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_views"
        android:text="@string/checkbox_text"
        android:checked="false"
        style="@style/Base.TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/clickbutton_text"
        style="@style/Base.TextAppearance.AppCompat.Button" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_views"
        android:max="10"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal" />

    <TextView
        android:id="@+id/textProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_views"
        android:text="@string/progress_bar_text"
        style="@style/Base.TextAppearance.AppCompat.Caption" />

    <TextView
        android:id="@+id/textGreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_views"
        style="@style/Base.TextAppearance.AppCompat.Headline" />

</LinearLayout>